--- a/spec/cassettes/token_create_ok.yml
+++ b/spec/cassettes/token_create_ok.yml
@@ -33,16 +33,63 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       Etag:
-      - W/"b607804e58f0cd4a8da3c95114c41bb1"
+      - W/"f6155de91f20a2d376e5693b98a3c24a"
       X-Request-Id:
-      - 5b0a7476-4a9b-451f-81bc-49757d0921c5
+      - d7112e04-70fa-4d29-8008-d9f4b5393050
       X-Runtime:
-      - '0.078142'
+      - '0.078261'
       Transfer-Encoding:
       - chunked
     body:
       encoding: UTF-8
-      string: '{"access_token":"<DUMMY_TOKEN>","expires_in":86399,"created_at":1470747247}'
+      string: '{"access_token":"<DUMMY_TOKEN>","expires_in":86399,"created_at":1470808726}'
     http_version: 
-  recorded_at: Tue, 09 Aug 2016 12:54:07 GMT
+  recorded_at: Wed, 10 Aug 2016 05:58:46 GMT
+- request:
+    method: post
+    uri: http://devbox:3000/oauth/token
+    body:
+      encoding: UTF-8
+      string: email=agency%40test.com&grant_type=password&password=agency_test
+    headers:
+      User-Agent:
+      - Faraday v0.9.2
+      Authorization:
+      - bearer <DUMMY_TOKEN>
+      Content-Type:
+      - application/x-www-form-urlencoded
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - '*/*'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      X-Frame-Options:
+      - SAMEORIGIN
+      X-Xss-Protection:
+      - 1; mode=block
+      X-Content-Type-Options:
+      - nosniff
+      Cache-Control:
+      - no-store
+      Pragma:
+      - no-cache
+      Content-Type:
+      - application/json; charset=utf-8
+      Etag:
+      - W/"575ee220015e8930865a9158e1e84b64"
+      X-Request-Id:
+      - 46151418-a59b-4541-8e57-086a22dc072c
+      X-Runtime:
+      - '0.078355'
+      Transfer-Encoding:
+      - chunked
+    body:
+      encoding: UTF-8
+      string: '{"access_token":"<DUMMY_TOKEN>","expires_in":86400,"created_at":1470808727}'
+    http_version: 
+  recorded_at: Wed, 10 Aug 2016 05:58:47 GMT
 recorded_with: VCR 3.0.3
